ipc/ipdl/test/ipdl/error/PToplevelManualDealloc.ipdl
//error: Toplevel protocols cannot be [ManualDealloc]

[ManualDealloc, ChildProc=any]
async protocol PToplevelManualDealloc {
child:
    async __delete__();
};
